--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
+/* TAILWIND */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 /* IMPORT FONT */
 @import url(//fonts.googleapis.com/earlyaccess/notosanskr.css);
 @font-face {
